--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
   "license": "MIT",
   "devDependencies": {
     "@testing-library/cypress": "^4.2.0",
-    "cypress": "^4.11.0",
+    "cypress": "9.0.0",
     "cypress-commands": "^0.2.0",
     "cypress-dark": "^1.7.14",
     "cypress-multi-reporters": "^1.4.0",
